Dibuat menggunakan Colaboratory

--- a/Assignment_3_Basic_Python_M_Farhan_Fauzie.ipynb
+++ b/Assignment_3_Basic_Python_M_Farhan_Fauzie.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment 3 - Basic Python - M Farhan Fauzie.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZuadslPxzLTnimqXZYAlZ",
+      "authorship_tag": "ABX9TyMRm60E/9gtc/it8HU72Td3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,23 +64,10 @@
         "print(\"Haii!\", Nama + \", senang berkenalan denganmu!\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IBCH3pVVOaMd",
-        "outputId": "081999e8-9b41-4297-b25d-5b8eed26b282"
+        "id": "IBCH3pVVOaMd"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Masukkan nama anda: FarhanF\n",
-            "Haii! FarhanF, senang berkenalan denganmu!\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -96,31 +83,35 @@
     {
       "cell_type": "code",
       "source": [
-        "Panjang = float(input(\"Panjang: \"))\n",
-        "Lebar = float(input(\"Lebar: \")) \n",
+        "# Remark\n",
+        "Length = float(input(\"Length: \"))\n",
+        "Width = float(input(\"Lebar: \"))\n",
         "\n",
-        "Luas_Ruangan_Meter = Panjang * Lebar \n",
-        "Luas_Ruangan_Hektar = (Panjang * Lebar)/10e4 \n",
-        "print(\"Luas Ruangan dalam M2 :\", Luas_Ruangan_Meter, \"M2\")\n",
-        "print(\"Luas Ruangan dalam Hektar :\", Luas_Ruangan_Hektar, \"Hektar\")"
+        "# Equation Standard of Area Total\n",
+        "Total_area_Meter = Length * Width\n",
+        "Total_area_Hektar = (Length * Width)/10e4\n",
+        "\n",
+        "#Result\n",
+        "print(\"Total area (M2) : \", Total_area_Meter, \"M2\")\n",
+        "print(\"Total area (H2) : \", Total_area_Hektar, \"H2\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QzL3uLFPPqUw",
-        "outputId": "2d533853-507a-44aa-eba3-d9556944665d"
+        "outputId": "9d981fd3-1982-43bb-82b2-c1f5250b210c"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Panjang: 7\n",
+            "Length: 7\n",
             "Lebar: 7\n",
-            "Luas Ruangan dalam M2 : 49.0 M2\n",
-            "Luas Ruangan dalam Hektar : 0.00049 Hektar\n"
+            "Total area (M2) :  49.0 M2\n",
+            "Total area (H2) :  0.00049 H2\n"
           ]
         }
       ]
@@ -139,36 +130,35 @@
     {
       "cell_type": "code",
       "source": [
-        "Hasil = 0\n",
-        "Input_N = int(input(\"N: \")) \n",
-        "for N in range(1, (Input_N + 1), 1):\n",
-        "    Hasil = Hasil + N\n",
-        "    print(N)\n",
-        "    \n",
-        "print(\"Sn = {}\".format(Hasil))"
+        "#Equation\n",
+        "Input_n=int(input(\"Enter a number: \"))\n",
+        "a=[]\n",
+        "for i in range(1,Input_n+1):\n",
+        "    print(i,sep=\" \",end=\" \")\n",
+        "    if(i<n):\n",
+        "        print(\"+\",sep=\" \",end=\" \")\n",
+        "    a.append(i)\n",
+        "\n",
+        "# Result\n",
+        "print(\"=\",sum(a)) \n",
+        "print()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "4uquz5FfQ_ig",
-        "outputId": "22a4b952-9d5a-48f8-ea02-a41733587094"
+        "outputId": "f8007363-0657-4192-ad8e-3e94f209ebd0"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "N: 7\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "Sn = 28\n"
+            "Enter a number: 6\n",
+            "1 + 2 + 3 + 4 + 5 + 6 + = 21\n",
+            "\n"
           ]
         }
       ]
@@ -222,7 +212,7 @@
         "id": "fcvkr8GuS2td",
         "outputId": "7786ec2d-046d-4a06-e13c-7db321aa430f"
       },
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,7 +320,7 @@
         "id": "mt-r26VsXHQa",
         "outputId": "2b4130e9-f52e-4714-d1ea-a771221009d3"
       },
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +386,7 @@
         "id": "aj0ga-46hOgN",
         "outputId": "de55106c-c56f-4426-ef13-dcd900bce90b"
       },
-      "execution_count": null,
+      "execution_count": 120,
       "outputs": [
         {
           "output_type": "display_data",
@@ -462,7 +452,7 @@
         "id": "EkaA2xRclaoi",
         "outputId": "b454385e-85af-4ccb-cbd8-8b14a3785178"
       },
-      "execution_count": null,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "display_data",
@@ -522,7 +512,7 @@
         "id": "vPyjLSjlooeO",
         "outputId": "526243a5-3f81-410c-f9af-86970286d7f5"
       },
-      "execution_count": null,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "display_data",
