Dibuat menggunakan Colaboratory

--- a/Assignment_3_Basic_Python_M_Farhan_Fauzie.ipynb
+++ b/Assignment_3_Basic_Python_M_Farhan_Fauzie.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment 3 - Basic Python - M Farhan Fauzie.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNdlsk+fT1+A/AvScxeQ9r9",
+      "authorship_tag": "ABX9TyPTHpkqazZDrFkqK5QbdGiq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "Length = float(input(\"Length: \"))\n",
         "Width = float(input(\"Lebar: \"))\n",
         "\n",
-        "# Equation Standard of Area Total\n",
+        "# Formula Standard of Area Total\n",
         "Total_area_Meter = Length * Width\n",
         "Total_area_Hektar = (Length * Width)/10e4\n",
         "\n",
@@ -130,7 +130,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Equation\n",
+        "# Formula\n",
         "Input_n=int(input(\"Enter a number: \"))\n",
         "a=[]\n",
         "for i in range(1,Input_n+1):\n",
@@ -250,32 +250,33 @@
       "cell_type": "code",
       "source": [
         "def Mengecek_skala_gempa():\n",
+        "\n",
         "  skala = float(input(\"Skala : \"))\n",
         "  if skala >= 0. :\n",
         "      if skala < 2.0 :\n",
         "            return print('Micro')\n",
         "      elif skala >= 2.0 and skala <= 2.9 :\n",
-        "              return print('Minor')\n",
+        "              return print('Minor Earthquake')\n",
         "      elif skala <= 3.9:\n",
-        "              return print('Minor')\n",
+        "              return print('Minor Earthquake')\n",
         "      elif skala <= 4.9:\n",
-        "              return print('Light')\n",
+        "              return print('Light Earthquake')\n",
         "      elif skala <= 5.9:\n",
-        "              return print('Moderate')\n",
+        "              return print('Moderate Earthquake')\n",
         "      elif skala <= 6.9:\n",
-        "              return print('Strong')\n",
+        "              return print('Strong Earthquake')\n",
         "      elif skala <= 7.9:\n",
-        "              return print('Major')\n",
+        "              return print('Major Earthquake')\n",
         "      elif skala <= 8.9:\n",
-        "              return print('Great')\n",
+        "              return print('Great Earthquake')\n",
         "      elif skala <= 9.9:\n",
-        "              return print('Great')\n",
+        "              return print('Great Earthquake')\n",
         "      elif skala > 10.0:\n",
-        "              return print('Massive')\n",
+        "              return print('Massive Earthquake')\n",
         "      else:\n",
         "              return print('Unidentified')\n",
         "              \n",
-        "\n",
+        "# Result\n",
         "Mengecek_skala_gempa()\n"
       ],
       "metadata": {
@@ -283,16 +284,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mt-r26VsXHQa",
-        "outputId": "2b4130e9-f52e-4714-d1ea-a771221009d3"
+        "outputId": "dd5fb519-3530-4aa8-d44a-0aaf1ed12225"
       },
-      "execution_count": 112,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Skala : 7\n",
-            "Major\n"
+            "Skala : 5\n",
+            "Moderate Earthquake\n"
           ]
         }
       ]
